# ecclesia

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py  hello.py
backend/tests/: test_health.py
docker/: docker-compose.dev.yml
mobile/: Dockerfile  package-lock.json  package.json
web/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
